@@ -111,7 +111,6 @@ public:
 	virtual void show_journey_failed() = 0;
 
 	void play_flic(const char *archive, int index);
-	void play_audio(const char *archive, int index);
 	
 	void add_shape(const char *name, int shapenum);
 	int get_shape(const char *name);
